<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/abril_fatface"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:text="@string/business_name"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/satisfy_regular"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/subtitle"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mainTextInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/subtitle"
            android:layout_marginStart="64dp"
            android:fontFamily="sans-serif"
            android:gravity="fill_horizontal|end"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/description_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/orderCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/mainTextInfo"
            android:layout_centerHorizontal="true"
            android:autoLink="phone"
            android:fontFamily="sans-serif"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/phone_number"
            android:textAlignment="viewEnd"
            android:textColorLink="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/orderCall"
            android:layout_centerHorizontal="true"
            android:autoLink="phone"
            android:fontFamily="sans-serif"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/subtitle_phone_number"
            android:textAlignment="viewEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/available"
            android:layout_centerHorizontal="true"
            android:autoLink="phone"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/business_schedule"
            android:textAlignment="viewEnd"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LinLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/hours"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:autoLink="map"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:contentDescription="@string/content_description_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/staticmap" />
        </LinearLayout>

        <TextView
            android:id="@+id/linkme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinLay"
            android:text="@string/web_link"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linkme"
            android:autoLink="web"
            android:paddingBottom="16dp"
            android:text="@string/website"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary"
            android:textSize="24sp" />
    </RelativeLayout>

</ScrollView>